# rust_course

./: Cargo.toml  run.sh  variables
src/: lib.rs  main.rs
